refactor(cps): 重构订单查询与分页接口支持及能力声明
- 新增显式订单分页结果CpsOrderPageResult及分页模式枚举CpsOrderPaginationMode
- 抽象客户端接口CpsApiVendorClient增加queryOrderPage方法，强制子类实现或抛异常
- 平台客户端策略接口CpsPlatformClient添加queryOrderPage默认方法，同样要求实现
- 各平台及供应商客户端如Didi、Taobao、Jd、Pdd等陆续实现queryOrderPage支持，并统一异常处理
- 引入统一供应商异常CpsVendorException，支持能力不支持等明确报错
- 新增供应商配置Schema、字段及验证机制，提高配置统一性与安全性
- 新增供应商能力枚举CpsVendorCapability及描述接口，支持动态声明能力集合
- 规范日志及异常信息，区分能力支持与订单查询失败等异常场景
- 优化订单DTO新增同步批次号字段，便于状态事件追踪
- 增加搜索请求复制方法，避免多平台调用时共享同一请求对象冲突
- 各平台客户端适配器升级，支持queryOrderPage调用，确保统一分页契约完成
- 整体提高CPS模块的扩展性、可维护性及服务能力规范，便于新增供应商接入及调用一致性